added results route
