# src/swagger.json
@@ -329,7 +329,7 @@
         }
       }
     },
-    "/hangout/{hangoutId}/vote": {
+    "/hangout/{hangoutId}/vote/{optionId}": {
       "put": {
         "description": "",
         "parameters": [
@@ -337,21 +337,30 @@
             "name": "hangoutId",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "ID of the hangout to vote in",
+            "schema": {
+              "type": "string",
+              "example": "63face4b17334f46d9b59ad7"
+            }
           },
           {
-            "name": "body",
-            "in": "body",
+            "name": "optionId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID of option to vote on",
             "schema": {
-              "type": "object",
-              "properties": {
-                "vote": {
-                  "example": "any"
-                },
-                "option": {
-                  "example": "any"
-                }
-              }
+              "type": "string",
+              "example": "63fad375e256e291ae4d0245"
+            }
+          },
+          {
+            "name": "vote",
+            "in": "body",
+            "description": "Details of the vote. Value should be -1, 0, or 1 for no, neutral, or yes, respectively. timeTaken is in seconds.",
+            "schema": {
+              "$ref": "#/definitions/voteInput"
             }
           }
         ],
@@ -362,8 +371,55 @@
           "201": {
             "description": "Created"
           },
+          "204": {
+            "description": "Voted successfully"
+          },
           "400": {
-            "description": "Bad Request"
+            "description": "Something else went wrong",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          },
+          "404": {
+            "description": "Could not find something - wrong ID possibly",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      }
+    },
+    "/hangout/{hangoutId}/results": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "hangoutId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID of the hangout to vote in",
+            "schema": {
+              "type": "string",
+              "example": "63face4b17334f46d9b59ad7"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Got the winning options"
+          },
+          "400": {
+            "description": "Something else went wrong",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          },
+          "404": {
+            "description": "Could not find something - wrong ID possibly",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
           }
         }
       }
@@ -501,6 +557,23 @@
       },
       "required": [
         "text"
+      ]
+    },
+    "voteInput": {
+      "type": "object",
+      "properties": {
+        "value": {
+          "type": "number",
+          "example": 1
+        },
+        "timeTaken": {
+          "type": "number",
+          "example": 4
+        }
+      },
+      "required": [
+        "value",
+        "timeTaken"
       ]
     }
   }
